Implementing all the effects as they are currently working